tests/check/illegal_select2.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_select(f32 [128, 128] i) {
  tile_factor : [32, 16];

  parallel p by 1 {
    with idx = {x_tile, y_tile} in [32, 16] {
      foreach x_tile, y_tile {
        i_shared = dma.copy.async i.chunkat(x_tile, y_tile) => shared;
        shared f32 [4, 2] i_shared0;
        parallel q by 1{
          tile_factor_local : [1, 4];
          local f32 [i_shared.span / tile_factor_local] i_local0;
          local f32 [4, 4] i_local6;
          with idx = {p_tile, q_tile} in [1, 4] {
            i_local_s1 = dma.copy.async i_shared.chunkat(q_tile, q_tile) => local;
            i_local_s2 = dma.copy.async i_shared.chunkat(p_tile, q_tile) => select(q_tile % 2, i_local0, i_shared0) after i_shared;
            i_local_s3 = dma.copy.async i_shared.chunkat(p_tile, q_tile) => select(q_tile % 2, i_local0, i_local6) after i_shared;
            f = select (#x_tile % #q, i_local_s1, i_local_s2);
            wait i_local_s1, i_local_s2, i_local_s3;
          }
        }
      }
    }
  }
}

// CHECK: i_shared0(shared f32 mdspan<2> [4, 2]) vs. i_local0(local f32 mdspan<2> [4, 2]).
// CHECK: i_local6(local f32 mdspan<2> [4, 4]) vs. i_local0(local f32 mdspan<2> [4, 2]).
// CHECK: i_local_s2(async=>local f32 mdspan<2> [4, 2]) vs. i_local_s1(async=>local f32 mdspan<2> [1, 2]).
// CHECK-NOT: error:
// CHECK: Totally 3 errors have been detected.

